<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_channel_id">download_notif</string>
    <string name="notification_channel_name">download</string>
    <string name="check_status">Check the status</string>
    <string name="notif_title">Udacity Android Kotlin Nanodegree</string>
    <string name="notif_body">The Project 3 repository\'s downloaded</string>

    <string name="button_name">Click me</string>
    <string name="prompt_select">Please select the file to download</string>
    <string name="button_download">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    
    <string name="glide_rb1">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_rb2">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_rb3">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="ok">OK</string>
    <string name="filename">File name</string>
    <string name="status">Status</string>
    <string name="fail">Fail</string>
    <string name="success">Success</string>



    
</resources>
